# proekt

./: README.md
PycharmProjects/dz14.1/: .coverage  README.md  pyproject.toml
PycharmProjects/dz14.1/src/: models.py
PycharmProjects/dz14.1/tests/: __init__.py  test_models.py
