[tool.poetry]
name = "dz14-1"
version = "0.1.0"
description = ""
authors = ["roman <rleonovic98@gmail.com>"]
readme = "README.md"
packages = [{include = "dz14"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
flake8 = "^7.1.2"
coverage = "^7.6.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
